# mcpypack

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
pypack/core/: datapack.py
src/MCpypack/: __init__.py
src/MCpypack/core/: datapack.py  namespace.py
src/MCpypack/item/: __init__.py
src/MCpypack/item/components/: __init__.py  components.py  consumable.py  custom_name.py  damage_type.py  glider.py  stored_enchantments.py
src/MCpypack/item/final/: __init__.py
src/MCpypack/recipe/: __init__.py  blasting.py  campfire_cooking.py  crafting_shaped.py  crafting_shapeless.py  crafting_transmute.py  furnace.py  smelting.py  smithing.py  smoking.py  stonecutting.py
src/MCpypack/recipe/crafting_special/: __init__.py
src/MCpypack/recipe/utils/: result.py
src/MCpypack/utils/: __init__.py  color.py  text.py
test/: TESTS.md
test/core/: test_datapack.py  test_namespace.py
test/utils/: test_category.py  test_color.py  test_experience.py  test_group.py  test_rarity.py  test_times.py
