[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MCpypack"
version = "0.5.4"
description = "Python library for easy creation of Minecraft datapacks"
authors = [
    {name = "Morten Barthel"}
]
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = ["packaging>=26.0"]
keywords = [
  "MCpypack",
  "minecraft",
  "datapack",
]

[project.urls]
Repository = "https://github.com/MRGE-Redstone/mcpypack"
Documentation = "https://mcpypack.kenolej.de/"

[tool.setuptools.package-data]
"MCpypack" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["MCpypack", "MCpypack.*"]
